fix: updated array of data, updated pressing functionality Shift and CapsLock

--- a/src/scss/components/keys.scss
+++ b/src/scss/components/keys.scss
@@ -6,6 +6,7 @@
     transform: all 2s ease 1s;
     background-color: #fff;
     font-size: 18px;
+    min-width: 25px;
 }
 
 .clearfix {
@@ -23,10 +24,11 @@
 }
 
 .key-space {
-    width: 300px;
+    width: 320px;
 }
+
 .key-shift {
-    width: 100px;
+    width: 80px;
 }
 
 .key-letters {
